//// https://dbdiagram.io/d
//// -- LEVEL 1
//// -- Tables and References

//// -- LEVEL 1
//// -- Tables and References

//BD disponibilizado para atividade 01

// Creating tables
Table tipos_sanguineos as TS {
  id int [pk, increment] // auto-increment
  tipo varchar
  fator varchar
  created_at timestamp
  updated_at timestamp
}

Table estados as EST {
  id int [pk, increment] // auto-increment
  nome varchar
  sigla varchar
  created_at timestamp
  updated_at timestamp
}

Table cidades as CID {
  id int [pk, increment] // auto-increment
  nome varchar
  estado_id int [ref: > EST.id]
  created_at timestamp
  updated_at timestamp
}

Table pessoas as P {
  id int [pk, increment] // auto-increment
  nome varchar
  rua varchar
  numero varchar
  complemento varchar
  documento varchar
  cidade_id int [ref:> CID.id]
  tipo_id int [ref:> TS.id]
  created_at timestamp
  updated_at timestamp
}

Table locais_coleta as LC {
  id int [pk, increment] // auto-increment
  nome varchar
  rua varchar
  numero varchar
  complemento varchar
  cidade_id int [ref:> CID.id]
  created_at timestamp
  updated_at timestamp
 }

Table doacoes as DOE {
  id int [pk, increment] // auto-increment
  pessoa_id int [ref: > P.id]
  local_id int [ref: > LC.id]
  data datetime
  created_at timestamp
  updated_at timestamp
 }
 
Table produtos as PROD {
  id int [pk, increment] // auto-increment   
  etiqueta varchar
  docao_id int [ref:> DOE.id]
  validade datetime
  created_at timestamp
  updated_at timestamp  
}

Table unidades as UNID {
  id int [pk, increment] // auto-increment   
  nome varchar  
  numero varchar
  complemento varchar
  cidade_id int [ref:> CID.id]
  created_at timestamp
  updated_at timestamp
}

Table distribuicoes as DIST {
  id int [pk, increment] // auto-increment   
  produto_id int [ref:> PROD.id]  
  unidade_id int [ref:> UNID.id]
  data datetime
  created_at timestamp
  updated_at timestamp
}